--- a/website/templates/register.html
+++ b/website/templates/register.html
@@ -1,4 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
-<h1>Register</h1>
+    <form method="post">
+        <h3>Register</h3>
+        <div>
+            <label for="email">Email Address</label>
+            <input type="email" class="form-control" id="email" name="email" placeholder="Enter email">
+            <label for="username">Username</label>
+            <input type="text" class="form-control" id="username" name="username" placeholder="Enter username">
+            <label for="password">Password</label>
+            <input type="password" class="form-control" id="password" name="password" placeholder="Enter password">
+            <button type="submit" class="btn btn-primary">Register now</button>
+        </div>
+    </form>
 {% endblock %}
