--- a/backend/website/templates/home.html
+++ b/backend/website/templates/home.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 {% block content %}
     <h1>Home</h1>
-    <h2>Hello {{ username }}!</h2>
+    <h2>Hello {{ user.email.split('@')[0] }}!</h2>
 {% endblock %}
