big update: - changed database to mysql - fixed database configuration - fixed data fetching - added 'games' page

--- a/backend/website/templates/games.html
+++ b/backend/website/templates/games.html
@@ -2,15 +2,23 @@
 {% block content %}
     <h1>Games</h1>
     <h2>These are games for you {{ user.email.split('@')[0] }}!</h2>
-    <img src={{ "https:" + game.cover }}>
-    {{ game.name }}
-    {{ game.summary  }}
 
     <ul class="list-group">
-        {% for genre in game.genres %}
-            <li class="list-group-item">
-                {{ genre.name }}
+        {% for game in data %}
+            <li>
+                <img src={{ "https:" + game.cover }}>
+                {{ game.name }}
+                {{ game.summary  }}
+                <ul>
+                    {% for genre in game.genres %}
+                        <li class="list-group-item">
+                            {{ genre.name }}
+                        </li>
+                    {% endfor %}
+                </ul>
             </li>
         {% endfor %}
     </ul>
+
+
 {% endblock %}
