--- a/backend/website/templates/games.html
+++ b/backend/website/templates/games.html
@@ -3,22 +3,33 @@
     <h1>Games</h1>
     <h2>These are games for you {{ user.email.split('@')[0] }}!</h2>
 
-    <ul class="list-group">
+    <div class="container text-center">
+        <div class="col">
+
         {% for game in data %}
-            <li>
-                <img src={{ "https:" + game.cover }}>
-                {{ game.name }}
-                {{ game.summary  }}
-                <ul>
-                    {% for genre in game.genres %}
-                        <li class="list-group-item">
-                            {{ genre.name }}
-                        </li>
-                    {% endfor %}
-                </ul>
-            </li>
+        <div class="row">
+
+        <div class="card mb-3">
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <img class="img-fluid rounded-start" alt="..." src={{ "https:" + game.cover }} >
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ game.name }}</h5>
+                        <small class="text-body-secondary">
+                            {% for genre in game.genres %}
+                                {{ genre + ' ' }}
+                            {% endfor %}
+                        </small>
+                        {#                        <p class="card-text" style="text-overflow: ellipsis; display: block; overflow: hidden;">{{ game.summary  }}</p>#}
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
         {% endfor %}
-    </ul>
 
-
+        </div>
+    </div>
 {% endblock %}
