--- a/backend/website/templates/games.html
+++ b/backend/website/templates/games.html
@@ -3,33 +3,27 @@
     <h1>Games</h1>
     <h2>These are games for you {{ user.email.split('@')[0] }}!</h2>
 
-    <div class="container text-center">
-        <div class="col">
-
-        {% for game in data %}
-        <div class="row">
-
-        <div class="card mb-3">
-            <div class="row g-0">
-                <div class="col-md-4">
-                    <img class="img-fluid rounded-start" alt="..." src={{ "https:" + game.cover }} >
+    <div class="row row-cols-1 row-cols-md-5 g-4">
+    {% for game in data %}
+          <div class="col">
+              <div class="card h-100">
+                <img class="card-img-top" alt="..." src={{ "https:" + game.cover }}>
+                <div class="card-body">
+                <a href="{{ url_for('views.game_details', game_title=game.slug) }}">
+                    <h5 class="card-title">{{ game.name }}</h5>
+                </a>
+                    <small class="text-body-secondary">
+                        {% for genre in game.genres %}
+                            {{ genre + ' ' }}
+                        {% endfor %}
+                        {% for theme in game.themes %}
+                            {{ theme + ' ' }}
+                        {% endfor %}
+                    </small>
                 </div>
-                <div class="col-md-8">
-                    <div class="card-body">
-                        <h5 class="card-title">{{ game.name }}</h5>
-                        <small class="text-body-secondary">
-                            {% for genre in game.genres %}
-                                {{ genre + ' ' }}
-                            {% endfor %}
-                        </small>
-                        {#                        <p class="card-text" style="text-overflow: ellipsis; display: block; overflow: hidden;">{{ game.summary  }}</p>#}
-                    </div>
-                </div>
-            </div>
-        </div>
-        </div>
-        {% endfor %}
-
-        </div>
+              </div>
+          </div>
+    {% endfor %}
     </div>
+
 {% endblock %}
