--- a/backend/website/templates/game.html
+++ b/backend/website/templates/game.html
@@ -2,6 +2,15 @@
 {% block content %}
 
     <h1>{{ game.name }}</h1>
+
+    {% if rating %}
+    <h3>Your rating: {{ rating }}</h3>
+    {% endif %}
+
+    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ratingModal">
+        Rate this game
+    </button>
+
     <img alt="..." src={{ "https:" + game.cover }}>
     <p><a class="link-opacity-100" href={{ game.url }}>Link to games page</a></p>
     <h3>Rating: {{ game.total_rating }}</h3>
@@ -31,5 +40,55 @@
     {% for item in game.screenshots %}
         <img alt="..." src={{ "https:" + item }}>
     {% endfor %}
+
+
+    <div class="modal fade" id="ratingModal" tabindex="-1"  aria-hidden="true">
+      <div class="modal-dialog  modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5">Rate {{ game.name }}</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <form method="post" action="{{ url_for('views.game_details', game_title=game.slug) }}">
+                {{ form.hidden_tag() }}
+                <div class="form-group">
+                    {{ form.rating(class="form-control") }}
+                    {% for error in form.rating.errors %}
+                        <span style="color: red;">{{ error }}</span>
+                    {% endfor %}
+                </div>
+                {{ form.submit(class="btn btn-primary") }}
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <!-- Button trigger modal -->
+<button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  Launch demo modal
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 {% endblock %}
