added option to delete rating

--- a/backend/website/templates/base.html
+++ b/backend/website/templates/base.html
@@ -33,9 +33,7 @@
             {% if category == "error" %}
             <div role="alert" class="alert alert-danger alert-dismissible fade show">
                 {{ message }}
-                <button type="button" class="close" data-dismiss="alert">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+                <button type="button" class="btn-close" data-dismiss="alert"></button>
             </div>
             {% else %}
                 <div role="alert" class="alert alert-success alert-dismissible fade show">
