--- a/backend/website/templates/base.html
+++ b/backend/website/templates/base.html
@@ -1,31 +1,45 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofM4zfuJ46L0MzG/A/YL8l5Mz7N49M" crossorigin="anonymous">
 
     <title>{% block title %}Home{% endblock %}</title>
+    <link rel="stylesheet" href={{ url_for('static', filename='base.css') }} >
+    <style>
+        body {
+            background-image: url("{{ url_for('static', filename='brick.jpg') }}");
+            background-repeat: repeat;
+            background-color: #2a2a2a;
+        }
+    </style>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
-            <span class="navbar-toggle-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbar">
-            <div class="navbar-nav">
-                {% if user.is_authenticated %}
-                <a class="nav-item nav-link" id="home" href="/">Home</a>
-                <a class="nav-item nav-link" id="home" href="/games">Browse games</a>
-                <a class="nav-item nav-link" id="logout" href="/logout">Logout</a>
-                {% else %}
-                <a class="nav-item nav-link" id="login" href="/login">Login</a>
-                <a class="nav-item nav-link" id="register" href="/register">Register</a>
-                {% endif %}
-            </div>
-        </div>
-    </nav>
+  <nav class="navbar navbar-expand-lg bg-dark-subtle border-bottom border-body">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+{#    <iframe src="https://ntmaker.gfto.ru/newneontexten/?image_height=80&image_width=320&image_font_shadow_width=7&image_font_size=42&image_background_color=1A1D20&image_text_color=0CC2CD&image_font_shadow_color=036E8E&image_url=&image_text=GAME ON&image_font_family=Neonic&" frameborder='no' scrolling='no' width="320" height="80"></iframe>#}
+  <iframe src="https://ntmaker.gfto.ru/newneontexten/?image_height=80&image_width=320&image_font_shadow_width=7&image_font_size=42&image_background_color=1A1D20&image_text_color=65ABFD&image_font_shadow_color=0D6EFD&image_url=&image_text=GAME ON&image_font_family=Neonic&" frameborder='no' scrolling='no' width="320" height="80"></iframe>
+    <div class="container-fluid">
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          {% if user.is_authenticated %}
+              <li class="nav-item fs-5"><a class="nav-link active" id="home" href="/">Home</a></li>
+              <li class="nav-item fs-5"><a class="nav-link active" id="home" href="/games">Browse games</a></li>
+              <li class="nav-item fs-5"><a class="nav-link active" id="logout" href="/logout">Logout</a></li>
+          {% else %}
+              <li class="nav-item fs-5"><a class="nav-link active" id="login" href="/login">Login</a></li>
+              <li class="nav-item fs-5"><a class="nav-link active" id="register" href="/register">Register</a></li>
+          {% endif %}
+      </ul>
+    </div>
+  </div>
+  </nav>
+
 
     {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
@@ -47,13 +61,24 @@
         {% endif %}
     {% endwith %}
 
-    <div class="container">
-        {% block content %}
-        {% endblock %}
-    </div>
+    <main>
+        <div class="container bg-secondary bg-opacity-25 p-3 mt-5 rounded-4">
+            {% block content %}
+            {% endblock %}
+        </div>
+    </main>
 
   <script
       type="text/javascript"
       src="{{ url_for('static', filename='index.js') }}"></script>
   </body>
+ <footer>
+     <div class="d-flex justify-content-between">
+         <div class="d-flex flex-column text-start">
+            <a href="https://www.vecteezy.com/free-photos">Free Stock photos by Vecteezy</a>
+             <p><a href="https://www.freepik.com/free-photo/effect-view-grungy-construction-vintage-material_1244175.htm#page=2&query=seamless%20brick%20wall&position=5&from_view=search&track=ais&uuid=c7f2d909-aa76-49da-ba73-745d40c1c3eb">Image by 4045</a> on Freepik</p>
+         </div>
+         <p>Author: Aneta Kilar</p>
+     </div>
+</footer>
 </html>
