--- a/backend/website/templates/home.html
+++ b/backend/website/templates/home.html
@@ -1,15 +1,41 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1>Home</h1>
     <h2>Hello {{ user.email.split('@')[0] }}!</h2>
 
-    <button type="button" class="btn-default" onclick="recommend()" >Recommend something</button>
+    <h2>Your recommendations</h2>
+    <div class="row row-cols-1 row-cols-md-5 g-4 mb-3">
+    {% for game in data %}
+          <div class="col">
+              <div class="card h-100">
+                {% if game.cover %}
+                  <img class="card-img-top" alt="..." src={{ "https:" + game.cover }}>
+                {% endif %}
+                <div class="card-body">
+                <a href="{{ url_for('views.game_details', game_title=game.slug) }}">
+                    <h5 class="card-title">{{ game.name }}</h5>
+                </a>
+                    <small class="text-body-secondary">
+                        {% for genre in game.genres %}
+                            {{ genre + ' ' }}
+                        {% endfor %}
+                        {% for theme in game.themes %}
+                            {{ theme + ' ' }}
+                        {% endfor %}
+                    </small>
+                </div>
+              </div>
+          </div>
+    {% endfor %}
+    </div>
 
     <h2>Your ratings</h2>
     <ul>
     {% for rating in user.ratings %}
         <li class="list-group-item">
-            {{ rating.rating }} - {{ rating.game.name }}
+            {{ rating.rating }} -
+            <a href="{{ url_for('views.game_details', game_title=rating.game.slug) }}">
+                {{ rating.game.name }}
+            </a>
             <button type="button" class="btn-close" onclick="deleteRating({{ rating.id }})" ></button>
         </li>
     {% endfor %}
