--- a/backend/website/templates/home.html
+++ b/backend/website/templates/home.html
@@ -2,31 +2,37 @@
 {% block content %}
     <h1>Hello {{ user.email.split('@')[0] }}!</h1>
 
-    <h2>Your recommendations</h2>
-    <div class="row row-cols-1 row-cols-md-5 g-4 mb-3">
-    {% for game in data %}
-          <div class="col">
-              <div class="card h-100">
-                {% if game.cover %}
-                  <img class="card-img-top" alt="..." src={{ "https:" + game.cover }}>
-                {% endif %}
-                <div class="card-body">
-                <a href="{{ url_for('views.game_details', game_title=game.slug) }}">
-                    <h5 class="card-title">{{ game.name }}</h5>
-                </a>
-                    <small class="text-body-secondary">
-                        {% for genre in game.genres %}
-                            {{ genre + ' ' }}
-                        {% endfor %}
-                        {% for theme in game.themes %}
-                            {{ theme + ' ' }}
-                        {% endfor %}
-                    </small>
-                </div>
+
+    {% if data %}
+        <h2>Your recommendations</h2>
+        <div class="row row-cols-1 row-cols-md-5 g-4 mb-3">
+        {% for game in data %}
+              <div class="col">
+                  <div class="card h-100">
+                    {% if game.cover %}
+                      <img class="card-img-top" alt="..." src={{ "https:" + game.cover }}>
+                    {% endif %}
+                    <div class="card-body">
+                    <a href="{{ url_for('views.game_details', game_title=game.slug) }}">
+                        <h5 class="card-title">{{ game.name }}</h5>
+                    </a>
+                        <small class="text-body-secondary">
+                            {% for genre in game.genres %}
+                                {{ genre + ' ' }}
+                            {% endfor %}
+                            {% for theme in game.themes %}
+                                {{ theme + ' ' }}
+                            {% endfor %}
+                        </small>
+                    </div>
+                  </div>
               </div>
-          </div>
-    {% endfor %}
-    </div>
+        {% endfor %}
+        </div>
+    {% else %}
+        <h2>Rate some more games to see recommendations</h2>
+    {% endif %}
+
 
     <h2>Your ratings</h2>
     <ul>
