--- a/backend/website/templates/browse.html
+++ b/backend/website/templates/browse.html
@@ -14,7 +14,7 @@
                 {% endfor %}
             {% endif %}
             <div class="text-center">
-                {{ search.submit(class="btn btn-primary") }}
+                <button type="submit" class="btn btn-primary me-2">Search</button>
             </div>
         </div>
     </form>
