--- a/backend/website/templates/login.html
+++ b/backend/website/templates/login.html
@@ -17,7 +17,9 @@
         <form method="post">
             {{ render_input(form.email) }}
             {{ render_input(form.password) }}
-            <button type="submit" class="btn btn-primary">Login</button>
+            <div class="text-center">
+                <button type="submit" class="btn btn-primary">Login</button>
+            </div>
         </form>
     </form>
 {% endblock %}
