--- a/backend/website/templates/register.html
+++ b/backend/website/templates/register.html
@@ -17,8 +17,9 @@
         <form method="post">
             {{ render_input(form.email) }}
             {{ render_input(form.password) }}
-            {{ render_input(form.confirm) }}
-            <button type="submit" class="btn btn-primary">Create account</button>
+            <div class="text-center">
+                <button type="submit" class="btn btn-primary">Create account</button>
+            </div>
         </form>
     </form>
 {% endblock %}
