--- a/backend/website/templates/home.html
+++ b/backend/website/templates/home.html
@@ -33,7 +33,7 @@
         <h2>Rate some more games to see recommendations</h2>
     {% endif %}
 
-    {% if ratings %}
+{% if user.ratings %}
     <h2>Your ratings</h2>
     <div class="row">
     <div class="col">
@@ -65,6 +65,7 @@
         </ul>
     </div>
     </div>
-    {% endif %}
+{% endif %}
+
 
 {% endblock %}
